--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1 {
-    text-shadow: 2px 2px #ffa07a;
+    text-shadow: 2px 2px #ffdc7a;
     text-decoration: underline;
 }
 
@@ -11,3 +11,4 @@ h1 {
 .blue-text {
     color: aquamarine;
 }
+
