--- a/home/style.css
+++ b/home/style.css
@@ -3,26 +3,30 @@ body {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    background: cadetblue;
+    background: url(../home/img/background.png);
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: rgb(74, 113, 122);
 }
 
 .wrapper {
     width: 100%;
     height: 100%;
-    background: hotpink;
+    
 }
 .container {
     width: 100%;
     height: 100%;
-    background: lightskyblue;
+    
 }
 .gengrid {
     width: 100%;
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 2fr 4fr;
-    background: rgb(186, 255, 212);
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
+    
+    
 }
 header {
     grid-column: 1/6;
@@ -30,12 +34,12 @@ header {
     height: 80px;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
-    background: rgb(255, 120, 66);
+    
 }
 .logobox {
    grid-column: 1/2;
     height: 80px;
-    background: rgb(69, 66, 255);
+    
 }
 .navigation {
     grid-column: 4/6;
@@ -43,43 +47,93 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr ;
     grid-template-rows: 1fr ;
-    background: rgb(66, 255, 82);
 }
 .home {
+    font-family: 'news-cycle';
+    font-size: x-large;
+    font-weight: lighter;
     grid-column: 1/2;
     grid-row: 1/2;
-    background: rgb(190, 167, 255);
+    color: rgb(27, 49, 49);
 }
 .about {
+    font-family: 'news-cycle';
+    font-size: x-large;
+    font-weight: lighter;
     grid-column: 2/3;
     grid-row: 1/2;
-    background: rgb(255, 139, 193);
+    color: rgb(27, 49, 49);
 }
 .contact {
+    font-family: 'news-cycle';
+    font-size: x-large;
+    font-weight: lighter;
     grid-column: 3/4;
     grid-row: 1/2;
-    background: rgb(96, 116, 170);
+    color: rgb(27, 49, 49);
 }
 .portfolio {
     grid-column: 1/2;
     grid-row: 3/4;
-    background: rgb(124, 22, 70);
+    position: relative;
+    text-align: center;
+}
+.portfoliotext {
+    font-family: 'news-cycle';
+    font-weight: bold;
+    font-size: large;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
 }
 .blog {
     grid-column: 2/3;
     grid-row: 2/3;
-    background: rgb(161, 167, 161);
+    position: relative;
+    text-align: center;
+}
+.blogtext {
+    font-family: 'news-cycle';
+    font-weight: bold;
+    font-size: large;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
 }
 .exercises {
     grid-column: 4/5;
     grid-row: 2/3;
-    background: rgb(62, 153, 115);
+    position: relative;
+    text-align: center;
 }
+.exercisestext {
+    font-family: 'news-cycle';
+    font-size: large;
+    font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
 .projects {
     grid-column: 5/6;
     grid-row: 3/4;
-    background: rgb(250, 47, 47);
+    position: relative;
+    text-align: center;
 }
+.projecttext {
+    font-family: 'news-cycle';
+    font-size: large;
+    font-weight: bold;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
+}
+
 .landingbox {
     grid-column: 2/5;
     grid-row: 2/4;
@@ -88,15 +142,45 @@ header {
     grid-template-rows: 1fr 1fr;
 }
 .lucia {
+    font-family: 'vidaloka';
     grid-column: 2/3;
     grid-row: 1/2;
-    background: rgb(47, 250, 115);
+    font-size: 100px;
+    color: rgb(18, 26, 34);
 }   
 .perfumo {
+    font-family: 'vidaloka';
     grid-column: 1/4;
     grid-row: 2/3;
-    background: rgb(250, 145, 47);
-}   
+    font-size: 100px;
+    color: rgb(18, 26, 34);
+}
+.bigwhale {
+    grid-column: 3/6;
+    grid-row: 4/5;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding-right: 30px;
+    
+}
+.smallwhale {
+    grid-column: 2/4;
+    grid-row: 3/5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 40px;
+}
+.fish {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    
+}
+
 .flexc{
     display: flex;
     flex-direction: column;
@@ -112,4 +196,27 @@ header {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+}
+.stretch {
+    
+    transform:scale(1.2,1);
+}
+
+.letterspace {
+    letter-spacing: 2px;
+}
+
+a:link {
+    text-decoration: none;
+  }
+a {
+    color: rgb(30, 45, 58);
+}
+@font-face {
+    font-family: vidaloka;
+    src: url('../fonts/vidaloka.ttf');
+}
+@font-face {
+    font-family: news-cycle;
+    src: url('../fonts/news-cycle-reg.ttf');
 }
