--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     width: 100vw;
     height: 100vh;
-    background: url(../home/img/background.png);
+    background: url(../Art-3001/img/background.png);
     background-size: 100%;
     background-repeat: no-repeat;
     background-color: rgb(74, 113, 122);
