--- a/style.css
+++ b/style.css
@@ -214,9 +214,9 @@ a {
 }
 @font-face {
     font-family: vidaloka;
-    src: url('../fonts/vidaloka.ttf');
+    src: url('../Art-3001/fonts/vidaloka.ttf');
 }
 @font-face {
     font-family: news-cycle;
-    src: url('../fonts/news-cycle-reg.ttf');
+    src: url('../Art-3001/fonts/news-cycle-reg.ttf');
 }
