project 1 change location of nav
moved from center to lower

--- a/style.css
+++ b/style.css
@@ -66,6 +66,12 @@ header {
     grid-row: 1/2;
     color: rgb(27, 49, 49);
 }
+hr.new1 {
+    border: none;
+    border-top: 1px solid;
+    color: rgb(63, 80, 114);
+     
+  }
 .portfolio {
     grid-column: 1/2;
     grid-row: 3/4;
