--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ header {
 .logobox {
    grid-column: 1/2;
     height: 80px;
-    
 }
 .navigation {
     grid-column: 4/6;
@@ -70,7 +69,6 @@ hr.new1 {
     border: none;
     border-top: 1px solid;
     color: rgb(63, 80, 114);
-     
   }
 .portfolio {
     grid-column: 1/2;
@@ -85,7 +83,7 @@ hr.new1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 .blog {
     grid-column: 2/3;
@@ -100,7 +98,7 @@ hr.new1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 .exercises {
     grid-column: 4/5;
@@ -115,7 +113,7 @@ hr.new1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 .projects {
     grid-column: 5/6;
@@ -130,7 +128,7 @@ hr.new1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
 .landingbox {
     grid-column: 2/5;
@@ -160,7 +158,6 @@ hr.new1 {
     justify-content: flex-end;
     align-items: flex-start;
     padding-right: 30px;
-    
 }
 .smallwhale {
     grid-column: 2/4;
@@ -176,7 +173,6 @@ hr.new1 {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    
 }
 .flexc{
     display: flex;
@@ -195,10 +191,8 @@ hr.new1 {
     align-items: flex-start;
 }
 .stretch {
-    
     transform:scale(1.2,1);
 }
-
 .letterspace {
     letter-spacing: 2px;
 }
