--- a/projects/style.css
+++ b/projects/style.css
@@ -33,7 +33,7 @@ header {
     border: 2px solid rgb(124, 148, 153);
     height: 65px;
 }
-.exercises {
+.project {
     grid-column: 1/3;
     font-family: 'vidaloka';
     font-size: xxx-large;
@@ -72,7 +72,7 @@ header {
     grid-row: 1/2;
     color: rgb(27, 49, 49);
 }
-.extext {
+.projecttext {
     font-family: 'news-cycle';
     font-weight: bold;
     font-size: large;
@@ -80,6 +80,29 @@ header {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+.projectbox {
+    background: rgb(243, 251, 252);
+    border-radius: 25px;
+    grid-column: 1/6;
+    grid-row: 2/3;
+    position: relative;
+    grid-gap: 50px;
+    left: 100px;
+    width: calc(100% - 200px) ;
+}
+.projectbox:hover {
+    opacity: 0.5;
+}
+.projimg{
+    border-radius: 25px;
+    grid-column: 1/6;
+    grid-row: 2/3;
+    position: relative;
+    grid-gap: 50px;
+    left: 100px;
+    width: calc(100% - 200px) ;
+    opacity: 0;
 }
 .flexc{
     display: flex;
@@ -95,39 +118,6 @@ header {
 .letterspace {
     letter-spacing: 2px;
 }
-img:hover {
-    opacity: 0.5;
-}
-.exone {
-    grid-column: 1/2;
-    grid-row: 2/3;
-    position: relative;
-    text-align: center;
-}
-.extwo {
-    grid-column: 2/3;
-    grid-row: 2/3;
-    position: relative;
-    text-align: center;
-}
-.exthree {
-    grid-column: 3/4;
-    grid-row: 2/3;
-    position: relative;
-    text-align: center;
-}
-.exfour {
-    grid-column: 4/5;
-    grid-row: 2/3;
-    position: relative;
-    text-align: center;
-}
-.exfive {
-    grid-column: 5/6;
-    grid-row: 2/3;
-    position: relative;
-    text-align: center;
-}
 a:link {
     text-decoration: none;
 }
@@ -142,5 +132,3 @@ a {
     font-family: news-cycle;
     src: url('../fonts/news-cycle-reg.ttf');
 }
-
-
