Project 1 Responsiveness attempt 1

--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@ body {
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
-    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;  
+    grid-template-rows: 1fr 2fr 2fr 2fr 2fr;
 }
 header {
     grid-column: 1/6;
     grid-row: 1/2;
     height: 80px;
     display: grid;
-    grid-template-columns: 1fr 1fr 2fr 1fr 1fr;  
+    grid-template-columns:  1fr 1fr 2fr 1fr 1fr;  
 }
 .logobox {
    grid-column: 1/2;
@@ -38,8 +38,8 @@ header {
     grid-column: 4/6;
     height: 80px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr ;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
 }
 .home {
     font-family: 'news-cycle';
@@ -134,7 +134,7 @@ hr.new1 {
     grid-column: 2/5;
     grid-row: 2/4;
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr ;
+    grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr 1fr;
 }
 .lucia {
@@ -202,6 +202,7 @@ a:link {
 a {
     color: rgb(30, 45, 58);
 }
+
 @font-face {
     font-family: vidaloka;
     src: url('fonts/vidaloka.ttf');
@@ -210,3 +211,96 @@ a {
     font-family: news-cycle;
     src: url('fonts/news-cycle-reg.ttf');
 }
+@media only screen and (max-width: 850px) {
+    
+    .gengrid {
+        display: grid;
+        grid-template-columns: 1fr 1fr ;
+        grid-template-rows: 1fr 2fr 2fr 2fr 2fr;  
+        
+    }
+    header {
+        grid-column: 1/3;
+        grid-row: 1/2;
+        display: grid;
+        grid-template-columns: 1fr 3fr;  
+    }
+    .logobox {
+        grid-column: 1/2;
+     }
+     .navigation {
+         grid-column: 2/3;
+         display: grid;
+         grid-template-columns: 1fr 1fr 1fr ;
+         grid-template-rows: 1fr ;
+     }
+     .home {
+        font-size: medium;
+    }
+    .about {
+        font-size: medium;
+    }
+    .contact {
+        font-size: medium;
+    }
+    .portfolio {
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+    .portfoliotext {
+        font-size: small;
+    }
+    .blog {
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    .blogtext {
+        font-size: small;
+    }
+    .exercises {
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+    .exercisestext {
+        font-size: small;
+    }
+    .projects {
+        grid-column: 2/3;
+        grid-row: 4/5;
+        position: relative;
+        text-align: center;
+    }
+    .projecttext {
+        font-size: small;
+    }
+    .landingbox {
+        grid-column: 1/3;
+        grid-row: 2/3;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+    .lucia {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        font-size: 40px;
+    }   
+    .perfumo {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        font-size: 40px;
+    }
+    .bigwhale {
+        grid-column: 2/3;
+        grid-row: 5/6;
+    }
+    .smallwhale {
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+    .fish {
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+
+  }
