--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     background-size: 100%;
     background-repeat: no-repeat;
     background-color: rgb(74, 113, 122);
+    overflow: hidden;
 }
 .wrapper {
     width: 100%;
@@ -32,7 +33,10 @@ header {
 }
 .logobox {
    grid-column: 1/2;
-    height: 80px;
+   height: 80px;
+   width: 60px;
+   height: auto;
+
 }
 .navigation {
     grid-column: 4/6;
@@ -302,5 +306,6 @@ a {
         grid-column: 1/2;
         grid-row: 5/6;
     }
+    
 
   }
