exercise 4 final edit

--- a/exercises/ex-4/style.css
+++ b/exercises/ex-4/style.css
@@ -169,6 +169,9 @@ header {
 .landingbox:hover {
     background-position: 0 100%;
 }
+.extracolor:hover {
+  opacity: .5;
+}
 
 
 
@@ -1157,4 +1160,5 @@ header {
     height: auto;
 
 }
+
 
