--- a/exercises/ex-3/style.css
+++ b/exercises/ex-3/style.css
@@ -169,6 +169,9 @@ align-items: center;
 .landingbox:hover {
   background-position: 0 100%;
 }
+.extracolor:hover {
+opacity: .5;
+}
 
 
 
@@ -1157,4 +1160,5 @@ text-align: center;
   height: auto;
 
 }
+
 
